--- a/src/assets/locales/en/translations.json
+++ b/src/assets/locales/en/translations.json
@@ -10,5 +10,6 @@
   "post-box-number-error": "please provide a unique numeric p.o box number",
   "email-error": "please provide an email address",
   "password-error": "please provide a password",
-  "confirm-password-error": "please provide a password"
+  "confirm-password-error": "please provide a password",
+  "login": "login"
 }
