ADDS: animated buttons

--- a/src/assets/locales/al/translations.json
+++ b/src/assets/locales/al/translations.json
@@ -11,5 +11,8 @@
   "post-box-number-error": "ju lutemi jepni një numër unik numerik të kutisë p.o",
   "password-error": "ju lutemi jepni një fjalëkalim",
   "confirm-password-error": "ju lutemi jepni një fjalëkalim",
-  "login":"identifikimi"
+  "login": "identifikimi",
+  "already-have-account": "posedoni një llogari!",
+  "doesn't-have-account": "nuk keni ende një llogari!",
+  "create-account": "krijo llogari"
 }
